# matrix_handler

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.py
matrix_handler/: __init__.py  cli.py  matrix_generator.py  matrix_transposer.py
matrix_handler/scripts/: __init__.py  matrix_handler.py  mtx_hdlr.py
tests/: __init__.py  test_matrix_handler.py
